<resources>
    <string name="app_name">DesignDemo</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="action_card">Card</string>
    <string name="action_event">Event</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_book">Book</string>
    <string name="action_download">download</string>
    <string name="action_star">Star</string>
    <string name="action_user">User</string>
    <string name="action_photos">Photos</string>
</resources>
