<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/action_home"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_card"
            android:icon="@drawable/ic_credit_card_grey600_24dp"
            android:title="@string/action_card"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_event"
            android:icon="@drawable/ic_event_grey600_24dp"
            android:title="@string/action_event"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_book"
            android:icon="@drawable/ic_book_grey600_24dp"
            android:title="@string/action_book"
            app:showAsAction="always"/>
    </group>
    <item android:title="@string/action_settings"
        >
        <menu>
            <item
                android:id="@+id/action_download"
                android:icon="@drawable/ic_get_app_grey600_24dp"
                android:title="@string/action_download"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_search"
                android:icon="@drawable/ic_search_grey600_24dp"
                android:title="@string/action_search"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_star"
                android:icon="@drawable/ic_grade_grey600_24dp"
                android:title="@string/action_star"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_user"
                android:icon="@drawable/ic_perm_identity_grey600_24dp"
                android:title="@string/action_user"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_grey600_24dp"
                android:title="@string/action_settings"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>
